# Legal_Rights_Navigator

./: .gitignore  Architecure .excalidraw  Architecure.excalidraw  docker-compose.yml  llmContext  netlify.toml  t.txt
backend/: .gitignore  IN_DOMAIN_EMBEDDINGS.json  OUT_DOMAIN_EMBEDDINGS.json  config.py  docker-compose.yml  extracted_output.md  main.py  output.md  output_blocks.json  output_raw.json  pyproject.toml  test_db.py  test_graph.py
backend/alembic/: env.py
backend/alembic/versions/: 042b6116455d_inital_migration.py  293d31542c17_fixed_conversations_table.py  2e76f1ae36a3_add_unique_constraints.py  57723bdc0e49_replace_document_chunk_with_legal_chunk.py  6a8fa7c7de33_add_legal_chunk_model.py  89aef952b5a6_inital_migrations.py  ae8a3efcb65f_fixed_conversation_table_unused_columns.py  fd653ea4cc65_test_migrate.py
backend/api/: apiRoutes.py  authRoute.py  chatRoute.py
backend/api/models/: StateRequest.py
backend/core/: config.py  db_session.py
backend/dev/: httpsEscape.py
backend/enums/: AgentAction.py  Domain.py  GateResult.py  Query_Type.py  RetrievalStatus.py
backend/graph/: graph.py  state.py
backend/graph/node_types/: conversation_model.py  graph_states_types.py  metadata_filter.py  validity_node.py
backend/graph/nodes/conversation/: conversation_understanding.py
backend/graph/nodes/retrieve/: backup.txt  retrieve.py  (+2 more)
backend/ingestion_engine/: chunker.py  ingest.py  models.py  utility_function.py
backend/middlewares/: auth_middleware.py
backend/models/: __init__.py  conversation.py  document_chunks.py  legal_chunks.py  messages.py  user.py
backend/repositories/: conversation.py  user.py
backend/services/: auth.py  get_embeddings.py  llm_manager.py  local_embedding.py
(+52 files in other folders)
